--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -20,7 +20,7 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/blog"
-url: "http://factsfinder.me/blog" # the base hostname & protocol for your site
+url: "https://factsfinder.github.io/blog" # the base hostname & protocol for your site
 twitter_username: factsfinder
 github_username:  factsfinder
 
